--- a/info.html
+++ b/info.html
@@ -49,6 +49,15 @@
       <h1 id="jungEx">거제 폭격기</h1>
       <h1 id="jungName"> 김정훈</h1>
     </div>
+
+
+    <div class="degLayer3"></div>
+    <div class="square3"></div>
+    <div class="person3"></div>
+    <div class="explain3">
+      <h1 id="joEx">안양 찐따</h1>
+      <h1 id="joName"> 조수형</h1>
+    </div>
     <!--section class="scene first">
       <h1>인천 불기둥 강진구</h1>
     </section>
